force-app/main/default/objects/TeamMember__c/TeamMember__c.object-meta.xml
<CustomObject>
    <label>TeamMember</label>
    <nameField>
        <displayFormat>TM-{00000}</displayFormat>
        <label>TeamMember Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TeamMembers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>