force-app/main/default/objects/TeamMember__c/fields/TECH_UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>TECH_UniqueKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>TECH_UniqueKey</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>